fix css to make it wider on mobile, height still wrong

--- a/index.css
+++ b/index.css
@@ -22,19 +22,18 @@ html {
    margin: auto;
    overflow: hidden;
    position: relative;
-   width: auto;
-   height: auto;
+   width: max(475px, 100dvw);
+   height: 100%;
 }
 
 body {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    color: var(--text-color);
    background-color: var(--background-color);
-   font-size: 1.1rem;
+   font-size: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
-   width: 100vw;
 }
 
 header {
@@ -113,7 +112,7 @@ main {
 }
 
 a {
-   color: chocolate;
+   color: whitesmoke;
 }
 
 a:focus,
